tests/good/interpret/060-different-order-constr-patt-2.clap
val x = (case { { O, C, A, M, L } => 42 }) ({ M, A, L, O, C })

