tests/bad/typing/032-case-at-type.clap
val x = case at int { A => B }
